--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,12 +6,27 @@
   "license": "MIT",
   "scripts": {
     "lint": "TIMING=1 eslint \"**/*.ts*\"",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "storybook": "concurrently \"yarn:watch-sb:*\"",
+    "watch-sb:css": "npx tailwindcss -i ./src/styles/base.css -o ./public/tailwind.css --watch",
+    "watch-sb:storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.13",
+    "babel-loader": "^8.3.0",
+    "concurrently": "^7.6.0",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
     "postcss": "^8.4.21",
@@ -19,5 +34,6 @@
     "tailwindcss": "^3.2.4",
     "tsconfig": "*",
     "typescript": "^4.5.2"
-  }
+  },
+  "dependencies": {}
 }
