--- a/apps/pwa/package.json
+++ b/apps/pwa/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "next-app",
+  "name": "pwa",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
     "test": "jest --coverage",
@@ -13,7 +13,7 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "server": "*",
+    "mailer": "*",
     "ui": "*"
   },
   "devDependencies": {
